--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "eslint-config-standard",
   "description": "JavaScript Standard Style - ESLint Shareable Config",
-  "version": "17.1.0",
+  "version": "17.2.0",
   "author": {
-    "name": "Feross Aboukhadijeh",
-    "email": "feross@feross.org",
-    "url": "https://feross.org"
+    "name": "Seungwoo321",
+    "email": "seungwoo321@gmail.com",
+    "url": "https://github.com/Seungwoo321"
   },
   "bugs": {
-    "url": "https://github.com/standard/eslint-config-standard/issues"
+    "url": "https://github.com/Seungwoo321/eslint-config-standard/issues"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=22.0.0"
   },
   "files": [
     "CHANGELOG.md",
@@ -21,22 +21,18 @@
     "lib/index.js"
   ],
   "devDependencies": {
-    "@arkweid/lefthook": "0.7.7",
-    "@commitlint/cli": "18.6.1",
-    "@commitlint/config-conventional": "18.6.3",
-    "@types/eslint": "8.44.8",
-    "ava": "6.1.3",
-    "commitlint-config-standard": "github:standard/commitlint-config-standard",
-    "editorconfig-checker": "5.1.8",
-    "eslint": "8.55.0",
-    "eslint-config-standard-with-typescript": "42.0.0",
-    "eslint-plugin-import": "2.30.0",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-promise": "6.6.0",
-    "npm-run-all": "4.1.5",
-    "semantic-release": "22.0.12",
-    "semantic-release-standard": "github:standard/semantic-release",
-    "tsconfigs": "5.0.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@types/eslint": "^9.6.1",
+    "@types/jest": "^29.5.14",
+    "editorconfig-checker": "^6.0.1",
+    "eslint": "^9.25.1",
+    "eslint-plugin-import": "^2.31.0",
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "semantic-release": "^24.2.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.5.4"
   },
   "homepage": "https://github.com/standard/eslint-config-standard",
@@ -70,38 +66,23 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "eslint": "^8.0.1"
+    "eslint": "^9.25.1"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/standard/eslint-config-standard.git"
   },
   "scripts": {
-    "clean-artifacts": "git clean lib -X --force",
+    "clean": "rimraf lib",
     "editorconfig": "editorconfig-checker",
-    "compile": "tsc",
+    "build": "pnpm clean && tsc",
     "lint": "eslint .",
-    "unit": "ava",
-    "test": "run-s clean-artifacts editorconfig compile lint unit"
+    "test": "jest"
   },
   "funding": [
     {
       "type": "github",
-      "url": "https://github.com/sponsors/feross"
-    },
-    {
-      "type": "patreon",
-      "url": "https://www.patreon.com/feross"
-    },
-    {
-      "type": "consulting",
-      "url": "https://feross.org/support"
+      "url": "https://github.com/sponsors/Seungwoo321"
     }
-  ],
-  "dependencies": {
-    "globals": "13.24.0",
-    "eslint-plugin-import": "2.30.0",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-promise": "6.6.0"
-  }
+  ]
 }
