--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "eslint-config-standard",
+  "name": "@seungwoo321/eslint-plugin-standard",
+  "type": "module",
   "description": "JavaScript Standard Style - ESLint Shareable Config",
-  "version": "17.2.0",
+  "version": "1.0.0",
   "author": {
     "name": "Seungwoo321",
     "email": "seungwoo321@gmail.com",
     "url": "https://github.com/Seungwoo321"
   },
   "bugs": {
-    "url": "https://github.com/Seungwoo321/eslint-config-standard/issues"
+    "url": "https://github.com/Seungwoo321/eslint-plugin-standard/issues"
   },
   "engines": {
     "node": ">=22.0.0"
@@ -20,12 +21,15 @@
     "lib/index.d.ts",
     "lib/index.js"
   ],
+  "dependencies": {
+    "eslint-plugin-import": "^2.31.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
-    "editorconfig-checker": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
     "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
@@ -33,9 +37,10 @@
     "semantic-release": "^24.2.3",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.31.0"
   },
-  "homepage": "https://github.com/standard/eslint-config-standard",
+  "homepage": "https://github.com/Seungwoo321/eslint-plugin-standard",
   "keywords": [
     "JavaScript Standard Style",
     "check",
@@ -70,11 +75,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/standard/eslint-config-standard.git"
+    "url": "git://github.com/Seungwoo321/eslint-plugin-standard.git"
   },
   "scripts": {
     "clean": "rimraf lib",
-    "editorconfig": "editorconfig-checker",
     "build": "pnpm clean && tsc",
     "lint": "eslint .",
     "test": "jest"
