--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/Seungwoo321/eslint-plugin-standard/issues"
   },
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.0.0"
   },
   "files": [
     "CHANGELOG.md",
@@ -33,6 +33,7 @@
     "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
+    "lefthook": "^1.11.11",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.2.3",
     "ts-jest": "^29.3.2",
