--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,9 @@
-name: NPM Publish
+name: PNPM Publish
 
 on:
   push:
     branches: [ main ]
+    # 태그 푸시시에도 배포 실행 (선택적)
     tags:
       - 'v*'
 
@@ -20,18 +21,23 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       
       - name: Run tests
-        run: npm test
+        run: pnpm test
       
       - name: Build (if needed)
-        run: npm run build --if-present
+        run: pnpm run build --if-present
       
       # 버전 자동 증가 및 태그 생성 (semantic-release 사용)
       - name: Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+        run: pnpm dlx semantic-release
