--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/github": "^11.0.2",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
@@ -82,7 +86,8 @@
     "clean": "rimraf lib",
     "build": "pnpm clean && tsc",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release"
   },
   "funding": [
     {
