--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/utils": "^8.31.0",
     "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
