--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@seungwoo321/eslint-plugin-standard",
   "type": "module",
   "description": "JavaScript Standard Style - ESLint Shareable Config",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.2",
   "publishConfig": {
     "access": "public"
   },
