--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
     "dsznajder.es7-react-js-snippets",
-    "esbenp.prettier-vscode"
+    "dbaeumer.vscode-eslint"
   ]
 }
