--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@seungwoo321/eslint-plugin-standard",
   "type": "module",
   "description": "JavaScript Standard Style - ESLint Shareable Config",
-  "version": "1.0.2",
+  "version": "1.1.2",
   "publishConfig": {
     "access": "public"
   },
@@ -30,12 +30,17 @@
     "@semantic-release/github": "^11.0.2",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@stylistic/eslint-plugin-jsx": "^4.2.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.3",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/utils": "^8.31.0",
     "eslint": "^9.25.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-promise": "^7.2.1",
     "jest": "^29.7.0",
     "lefthook": "^1.11.11",
     "rimraf": "^6.0.1",
@@ -86,7 +91,7 @@
     "clean": "rimraf lib",
     "build": "pnpm clean && tsc",
     "lint": "eslint .",
-    "test": "jest",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --config jest.config.ts",
     "semantic-release": "semantic-release"
   },
   "funding": [
