--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "lib": ["es2015", "esnext", "dom"],
     "skipLibCheck": true,
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "lib",
     "esModuleInterop": true,
     "strict": true,
     "moduleResolution": "node",
@@ -19,6 +19,8 @@
   },
   "include": [
     "src/**/*.ts",
+    "test/eslint-config-standard.test.js",
+    "test/eslint-config-standard.test.js"
   ],
   "exclude": ["node_modules"]
 }
