--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "lib/index.js"
   ],
   "dependencies": {
-    "eslint-plugin-import": "^2.31.0"
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@stylistic/eslint-plugin-jsx": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -30,17 +34,12 @@
     "@semantic-release/github": "^11.0.2",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "@stylistic/eslint-plugin-jsx": "^4.2.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.3",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/utils": "^8.31.0",
     "eslint": "^9.25.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.17.0",
-    "eslint-plugin-promise": "^7.2.1",
     "jest": "^29.7.0",
     "lefthook": "^1.11.11",
     "rimraf": "^6.0.1",
